# django-boilerplate-docker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DOCKERFILE  Makefile  README.md  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
apps/core/: admin.py  exception.py  renderer.py  urls.py  views.py
apps/core/models/: base.py  example.txt  soft_delete.py
config/: __init__.py  urls.py
config/env/: .sample_env
config/settings/: __init__.py  base.py  dev.py  prod.py  stage.py
